fixed spacing on contact page, WIP checkout cc form and unmount form bug

--- a/src/CheckoutAfter.css
+++ b/src/CheckoutAfter.css
@@ -3,6 +3,13 @@
   width: 95%;
   color: white;
   background:tomato;
-  padding: 2rem;
+  padding: 1rem;
   margin: auto;
+  overflow:hidden;
+}
+
+@media screen and (max-width: 1000px){
+  .checkout-after-container{
+    width: 100%;
+  }
 }
